<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gotaxi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="sign">SIGNUP</string>
     <string name="id">EMAILID</string>
   <string name="psd">PASSWORD</string>
    <string name="ok">ok</string>
    <string name="nm">NAME</string>
    <string name="cpd">CONFIRM PASSWORD</string>
    <string name="no">MOBILE NUMBER</string>
     <string name="re">REGISTER</string>
      <string name="db">DEBIT CARD</string>
     <string name="net">NETBANK</string>
     <string name="num">CARD NUMBER</string>
      <string name="bank">BANK NAME</string>
       <string name="exp">MM/DD</string>
        <string name="cv">CVV</string>
         <string name="nam">USERNAME</string>
        <string name="et">ENTER</string> 
         <string name="ac">ACCOUNT NUMBER</string>
          
</resources>
