<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gotaxi.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/id"
       
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mail"
        android:layout_below="@+id/mail"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/psd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cpsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cpd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/mobno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/cpsd"
        android:layout_below="@+id/cpsd"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:digits="1234567890"
        android:hint="@string/no"
        android:inputType="number" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobno"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/re" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/cpsd"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/nm"
         android:digits="abcdeghijklmnopqrstvuwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

</RelativeLayout>