<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/cardno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:digits="0123456789"
        android:hint="@string/num"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardno"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/exp" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/exp"
        android:layout_below="@+id/exp"
        android:layout_marginTop="28dp"
        android:ems="10"
         android:digits="0123456789"
        android:hint="@string/cv"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/ok" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exp"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
